
???? 0.9.19.6

    programmer visible changes:
    * Replaced default value path_so_far=list() with path_so_far=None
    * fixed wrong parameter name on CopyTool_win_xcopy.copy_dir_files_to_dir
    * Moved the curl config folder to be created in the bookkeeping folder so curls files for two version
        will not step on each other.
    user visible changes, client:
    * check-checksum command was defined by mistake to require --out command line option. Now removed.
    * A hack to prevent unwtaring of the sync folder. Copy command might copy something to the top level of the sync folder.
        So sync folder is avoided by detecting the bookkeeping folder inside.

    user visible changes, admin:
    * depend command: added a message at the end so we know output was created OK.

15/3/2015 0.10.0.4
    user visible changes, client:
    * Better, more meaningful progress messages.
    * GUIDs that have upper case characters are converted to lower case.
    * HAVE_INFO_MAP_PATH file is copied to the SITE_HAVE_INFO_MAP_PATH for possible usage by remove command.
    * SITE SITE_HAVE_INFO_MAP_PATH is used by remove if HAVE_INFO_MAP_PATH was not found. This was done because when removing installation that was done from offline folder, Central will not pass LOCAL_REPO_SYNC_DIR to instl. HAVE_INFO_MAP_PATH depends on LOCAL_REPO_SYNC_DIR.
    * New variable HAVE_INFO_MAP_FILE_NAME, used by HAVE_INFO_MAP_PATH, NEW_HAVE_INFO_MAP_PATH, SITE_HAVE_INFO_MAP_PATH.
    * Added time measurements to create urls
    * Sync command: When no files to sync created batch file will have one progress item: "Done Sync".
    * Sync command: When no dirs to create no prgress items will be created.
    * Sync using info_map with prepared URLs.
        if variable FILES_AND_URLS_INFO_MAP_URL is available this file will be read instead of the one in INFO_MAP_FILE_URL.
    user visible changes, admin:
    * Admin variable MAX_FILE_SIZE renamed MIN_FILE_SIZE_TO_WTAR.